Fix spacing and text

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
     flex-direction: row;
     width: 1500px;
     position: sticky;
-    align-items: right;
+    align-items: left;
     top: 0;
     z-index: 1000;
     background-color: #FFFFFF;
@@ -40,12 +40,10 @@ body {
   margin-top: 100px;
   padding: 5px;
   top: 0;
-  position: fixed;
-
 }
 
 .headshot{
-    height: 450px;
+    height: 500px;
 }
 
 .nav{
@@ -91,7 +89,7 @@ body {
 }
 
 .intro{
-    width: 450px;
+    width: 600px;
     padding-right: 20px;
 }
 
@@ -137,4 +135,9 @@ label {
   font-size: 30px;
   font-family: 'Questrial';
   margin-left: 30px;
+}
+
+.text{
+    padding-top: 30px;
+    margin-left: 20px;
 }
